--- a/Module3/pom.xml
+++ b/Module3/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>module3</groupId>
-    <artifactId>olukash.epam.com</artifactId>
+    <name>Module 3</name>
+    <groupId>olukash.epam.com</groupId>
+    <artifactId>module3</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
