--- a/Module5/pom.xml
+++ b/Module5/pom.xml
@@ -4,7 +4,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>Module 5</name>
-	<groupId>olukash.epam.com</groupId>
+	<groupId>com.epam.olukash</groupId>
 	<artifactId>module5</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<build>
@@ -25,5 +25,10 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.6</version>
+	</dependency>
 	</dependencies>
 </project>
