--- a/Module8/src/main/resources/log4j.properties
+++ b/Module8/src/main/resources/log4j.properties
@@ -5,3 +5,12 @@ log4j.rootLogger = INFO, theConsoleAppender
 log4j.appender.theConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.theConsoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.theConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+
+# Redirect log messages to File
+log4j.appender.reportsLog=org.apache.log4j.FileAppender
+log4j.appender.reportsLog.File=src/main/logs/reports.log
+log4j.appender.reportsLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.reportsLog.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+
+log4j.category.reportsLogger=DEBUG, reportsLog
+log4j.additivity.reportsLogger=false
