--- a/module10/pom.xml
+++ b/module10/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.epam.olukash</groupId>
 	<artifactId>module10</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>>module10</name>
+	<name>>Module 10</name>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -33,7 +33,6 @@
 
 	<properties>
 		<log4j-version>1.2.17</log4j-version>
-		<ojdbc6-version>11.2.0.4</ojdbc6-version>
 	</properties>
 
 	<dependencies>
@@ -42,11 +41,6 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j-version}</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.oracle</groupId>-->
-			<!--<artifactId>ojdbc6</artifactId>-->
-			<!--<version>11.2.0.4</version>-->
-		<!--</dependency>-->
 	</dependencies>
 
 </project>
