--- a/Module11/pom.xml
+++ b/Module11/pom.xml
@@ -42,8 +42,8 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>3.8.1</version>
-				<scope>${junit-version}</scope>
+				<version>${junit-version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
