--- a/Module11/module11-dao-layer/pom.xml
+++ b/Module11/module11-dao-layer/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<spring-test-dbunit-version>1.2.1</spring-test-dbunit-version>
-		<dbunit-version>2.5.0</dbunit-version>
+		<dbunit-version>2.4.7</dbunit-version>
 	</properties>
 
 	<dependencies>
@@ -51,6 +51,21 @@
 					<groupId>junit</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.springtestdbunit</groupId>
