--- a/Module11/module11-web/pom.xml
+++ b/Module11/module11-web/pom.xml
@@ -20,8 +20,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.epam.olukash</groupId>
 			<artifactId>businessLogic</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.epam.olukash</groupId>
+			<artifactId>dao-layer</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
