--- a/Module15/pom.xml
+++ b/Module15/pom.xml
@@ -28,6 +28,16 @@
       <artifactId>jersey-multipart</artifactId>
       <version>1.8</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>module15</finalName>
