--- a/Module17/pom.xml
+++ b/Module17/pom.xml
@@ -15,6 +15,7 @@
     <logback.version>1.0.13</logback.version>
     <hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
+    <hsqldb.version>2.3.2</hsqldb.version>
   </properties>
 
   <dependencies>
@@ -28,12 +29,6 @@
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -76,16 +71,6 @@
       <version>1.4</version>
     </dependency>
     <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>3.8.11.2</version>
-    </dependency>
-    <dependency>
-      <groupId>net.kemitix</groupId>
-      <artifactId>sqlite-dialect</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-    <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
       <version>2.3.1</version>
@@ -109,6 +94,16 @@
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <version>${validation-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>${hsqldb.version}</version>
     </dependency>
   </dependencies>
 
