--- a/Module18/pom.xml
+++ b/Module18/pom.xml
@@ -86,19 +86,19 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
-      <!--<plugin>-->
-        <!--<groupId>org.apache.tomcat.maven</groupId>-->
-        <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-        <!--<version>2.2</version>-->
-        <!--<configuration>-->
-          <!--<server>tomcat-development-server</server>-->
-          <!--<port>8080</port>-->
-          <!--<path>/</path>-->
-          <!--<systemProperties>-->
-            <!--<JAVA_OPTS>-Xmx1024m -Xms256m -Xnoagent -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>-->
-          <!--</systemProperties>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <server>tomcat-development-server</server>
+          <port>8080</port>
+          <path>/</path>
+          <systemProperties>
+            <JAVA_OPTS>-Xmx1024m -Xms256m -Xnoagent -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
+          </systemProperties>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
